--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,11 +27,21 @@
         </div>
     </section>
 
-    <section>
-        <div>
-
+    <section class="donate">
+        <div class="half-width">
+            <h1 class="dt">Donate Today</h1>
+            <p class="ptext2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
+                praesentium
+                repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
+                voluptas quasi.</p>
         </div>
-
+        <div class="flex-container">
+            <a class="donate-button" target="_blank" href="">100tk</a>
+            <a class="donate-button" target="_blank" href="">200tk</a>
+            <a class="donate-button" target="_blank" href="">500tk</a>
+            <a class="donate-button" target="_blank" href="">1000tk</a>
+            <a class="donate-button" target="_blank" href="">5000tk</a>
+        </div>
     </section>
 
 </body>
