--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section class="top-banner">
-        <div class="half-width">
+        <div class="top-div">
             <h1 class="ptext">Let’s Help Those Who Are
                 More In Need</h1>
             <p class="ptext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
@@ -27,17 +27,17 @@
         </div>
     </section>
 
-    <section class="donate">
-        <div class="half-width">
+    <section class="mid-section">
+        <div class="donate">
             <h1 class="dt">Donate Today</h1>
-            <p class="ptext2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
+            <p class="dtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
                 praesentium
                 repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
                 voluptas quasi.</p>
         </div>
-        <div class="flex-container">
+        <div class="donate-button-div">
             <a class="donate-button" target="_blank" href="">100tk</a>
-            <a class="donate-button" target="_blank" href="">200tk</a>
+            <a class="tk-button" target="_blank" href="">200tk</a>
             <a class="donate-button" target="_blank" href="">500tk</a>
             <a class="donate-button" target="_blank" href="">1000tk</a>
             <a class="donate-button" target="_blank" href="">5000tk</a>
