--- a/index.html
+++ b/index.html
@@ -40,8 +40,47 @@
             <a class="tk-button" target="_blank" href="">200tk</a>
             <a class="donate-button" target="_blank" href="">500tk</a>
             <a class="donate-button" target="_blank" href="">1000tk</a>
-            <a class="donate-button" target="_blank" href="">5000tk</a>
+            <a class="donate-button" target="_blank" href="">5000tk</a> <br>
         </div>
+        <div>
+            <input class="input-text" type="text" placeholder="Other Amount (Taka)"> <br>
+            <a class="anchor-button" target="_blank" href="">Donate Now</a> <br>
+        </div>
+    </section>
+
+
+    <section class="mid2-section">
+        <div class="donate-plan">
+            <h1 class="dpt">Our Donate Plan</h1>
+            <p class="dptext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
+                praesentium
+                repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
+                voluptas quasi.</p>
+        </div>
+        <div>
+            <div class="food">
+                <img src="icons/food.png" alt=""> <br>
+                <h1>Food for a family</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias soluta voluptates laudantium
+                    quaerat quas ratione quam excepturi assumenda voluptate voluptatem nostrum, eveniet error.
+                    Asperiores aliquam harum ad quaerat sit nobis!</p>
+            </div>
+            <div class="shelter">
+                <img src="icons/shelter.png" alt=""> <br>
+                <h1>Shelter for a family</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias soluta voluptates laudantium
+                    quaerat quas ratione quam excepturi assumenda voluptate voluptatem nostrum, eveniet error.
+                    Asperiores aliquam harum ad quaerat sit nobis!</p>
+            </div>
+            <div class="edu">
+                <img src="icons/Frame-1.png" alt=""> <br>
+                <h1>Education for a child</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias soluta voluptates laudantium
+                    quaerat quas ratione quam excepturi assumenda voluptate voluptatem nostrum, eveniet error.
+                    Asperiores aliquam harum ad quaerat sit nobis!</p>
+            </div>
+        </div>
+
     </section>
 
 </body>
