sokaler nastar age

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </section>
 
-    <section class="mid-section">
+    <section class="mid1-section">
         <div class="donate">
             <h1 class="dt">Donate Today</h1>
             <p class="dtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
@@ -47,7 +47,6 @@
             <a class="anchor-button" target="_blank" href="">Donate Now</a> <br>
         </div>
     </section>
-
 
     <section class="mid2-section">
         <div class="donate-plan">
@@ -77,10 +76,55 @@
                 <h1>Education for a child</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias soluta voluptates laudantium
                     quaerat quas ratione quam excepturi assumenda voluptate voluptatem nostrum, eveniet error.
-                    Asperiores aliquam harum ad quaerat sit nobis!</p>
+                    Asperiores aliquam harum ad quaerat sit nobis!</p> <br>
+            </div>
+        </div>
+    </section>
+
+    <section class="mid3-section">
+        <div class="flexible-container">
+            <div class="help">
+                <h1>Their lives depend on
+                    your donation</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
+                    praesentium</p>
+                <a class="contri-button" target="_blank" href="">How to Contribute?</a>
+            </div>
+            <div class="help">
+                <img src="images/donation0.jpg" alt="">
             </div>
         </div>
 
+        <div class="flexible-container">
+            <div class="help">
+                <img src="images/donation8.jpg" alt="">
+            </div>
+            <div class="help">
+                <h1>They need us
+                    to suvive</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
+                    praesentium
+                    repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
+                    voluptas quasi.</p>
+                <a class="contri-button" target="_blank" href="">How to Contribute?</a>
+            </div>
+        </div>
+
+        <div class="flexible-container">
+            <div class="help">
+                <h1>Help them the way
+                    you can
+                </h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
+                    praesentium
+                    repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
+                    voluptas quasi.</p>
+                <a class="contri-button" target="_blank" href="">How to Contribute?</a>
+            </div>
+            <div class="help">
+                <img src="images/donation10.jpg" alt="">
+            </div>
+        </div>
     </section>
 
 </body>
