--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +23,7 @@
             <p class="ptext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
                 praesentium
                 repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                voluptas quasi.</p>
+                voluptas quasi.</p> <br>
         </div>
         <div>
             <a class="anchor-button" target="_blank" href="">Donate Now</a>
@@ -87,7 +90,7 @@
                 <h1>Their lives depend on
                     your donation</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
-                    praesentium</p>
+                    praesentium</p> <br>
                 <a class="contri-button" target="_blank" href="">How to Contribute?</a>
             </div>
             <div class="help">
@@ -105,7 +108,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
                     praesentium
                     repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                    voluptas quasi.</p>
+                    voluptas quasi.</p> <br>
                 <a class="contri-button" target="_blank" href="">How to Contribute?</a>
             </div>
         </div>
@@ -118,7 +121,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
                     praesentium
                     repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                    voluptas quasi.</p>
+                    voluptas quasi.</p> <br>
                 <a class="contri-button" target="_blank" href="">How to Contribute?</a>
             </div>
             <div class="help">
@@ -126,6 +129,28 @@
             </div>
         </div>
     </section>
+
+    <section class="mid4-section">
+        <div class="update">
+            <h1 class="ut">Get My Updates</h1>
+            <p class="utext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
+                praesentium
+                repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
+                voluptas quasi.</p>
+        </div>
+        <div>
+            <div class="sub flexible-container">
+                <input class="email-text" type="text" placeholder="Email">
+                <a class="sub-button" target="_blank" href="">Subscribe</a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <br>
+        <h1>Be Humble</h1>
+        <p>I’m gonna do it</p>
+    </footer>
 
 </body>
 
