--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,10 +18,8 @@
         <div class="top-div">
             <h1 class="ptext">Let’s Help Those Who Are
                 More In Need</h1>
-            <p class="ptext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
-                praesentium
-                repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                voluptas quasi.</p> <br>
+            <p class="ptext">We help fellow nonprofits access the funding, tools, training and support they need to
+                serve their communities.</p> <br>
         </div>
         <div>
             <a class="anchor-button" target="_blank" href="">Donate Now</a>
@@ -33,10 +29,8 @@
     <section class="mid1-section">
         <div class="donate">
             <h1 class="dt">Donate Today</h1>
-            <p class="dtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
-                praesentium
-                repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                voluptas quasi.</p>
+            <p class="dtext">We make it easy to donate to reliable, locally-led disaster
+                relief and recovery efforts in Bangladesh.</p>
         </div>
         <div class="donate-button-div">
             <a class="donate-button" target="_blank" href="">100tk</a>
@@ -54,32 +48,29 @@
     <section class="mid2-section">
         <div class="donate-plan">
             <h1 class="dpt">Our Donate Plan</h1>
-            <p class="dptext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
-                praesentium
-                repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                voluptas quasi.</p>
+            <p class="dptext">We've made it possible for more than 36 companies
+                to support local causes in Bangladesh.</p>
         </div>
-        <div>
+        <div class="donate-plan2">
             <div class="food">
                 <img src="icons/food.png" alt=""> <br>
                 <h1>Food for a family</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias soluta voluptates laudantium
-                    quaerat quas ratione quam excepturi assumenda voluptate voluptatem nostrum, eveniet error.
-                    Asperiores aliquam harum ad quaerat sit nobis!</p>
+                <p>Your gift will support our ongoing ministry and continue the work of launching
+                    local food systems
+                    that reduce poverty and hunger with dignity. </p>
             </div>
             <div class="shelter">
                 <img src="icons/shelter.png" alt=""> <br>
                 <h1>Shelter for a family</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias soluta voluptates laudantium
-                    quaerat quas ratione quam excepturi assumenda voluptate voluptatem nostrum, eveniet error.
-                    Asperiores aliquam harum ad quaerat sit nobis!</p>
+                <p>We provide crisis intervention, safe housing and supportive services necessary to families
+                    experiencing homelessness and victims of domestic violence. </p>
             </div>
             <div class="edu">
                 <img src="icons/Frame-1.png" alt=""> <br>
                 <h1>Education for a child</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias soluta voluptates laudantium
-                    quaerat quas ratione quam excepturi assumenda voluptate voluptatem nostrum, eveniet error.
-                    Asperiores aliquam harum ad quaerat sit nobis!</p> <br>
+                <p>A good education is a child’s best chance to escape poverty. Together, we can do more than just
+                    getting
+                    kids in the classroom, we can empower them for a brighter future. </p>
             </div>
         </div>
     </section>
@@ -89,8 +80,8 @@
             <div class="help">
                 <h1>Their lives depend on
                     your donation</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
-                    praesentium</p> <br>
+                <p>Your donation ensures that when an emergency happens,
+                    our teams are there to relieve suffering and save lives.</p> <br>
                 <a class="contri-button" target="_blank" href="">How to Contribute?</a>
             </div>
             <div class="help">
@@ -105,10 +96,8 @@
             <div class="help">
                 <h1>They need us
                     to suvive</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
-                    praesentium
-                    repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                    voluptas quasi.</p> <br>
+                <p>This is solidarity, for humanity and compassion, let us give hope, let us
+                    stand with them in need.</p> <br>
                 <a class="contri-button" target="_blank" href="">How to Contribute?</a>
             </div>
         </div>
@@ -118,10 +107,8 @@
                 <h1>Help them the way
                     you can
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
-                    praesentium
-                    repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                    voluptas quasi.</p> <br>
+                <p>Everyone has something to give
+                    and every act of generosity counts</p> <br>
                 <a class="contri-button" target="_blank" href="">How to Contribute?</a>
             </div>
             <div class="help">
@@ -133,10 +120,8 @@
     <section class="mid4-section">
         <div class="update">
             <h1 class="ut">Get My Updates</h1>
-            <p class="utext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sequi esse eveniet
-                praesentium
-                repellendus non tempore sint vel voluptatum! Quia harum sequi quisquam natus corporis omnis eos illo
-                voluptas quasi.</p>
+            <p class="utext">For getting updates,
+                enter your email address to subscribe</p>
         </div>
         <div>
             <div class="sub flexible-container">
