Extra Section added

--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
     </section>
 
     <section class="mid4-section">
+        <h1 class="et">Join our Volunteers Club</h1>
+        <p class="etext">A lot of work is contributed by our Volunteer Club – and you can join us! This gives you the
+            opportunity to
+            help people in need, develop your professional skills and you are going to be part of our amazing
+            community.
+            Please, email us at donatetodaybd@gmail.com
+        </p>
+        <h1 class="et">News</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lXLXOdr8jjU" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </section>
+
+    <section class="mid5-section">
         <div class="update">
             <h1 class="ut">Get My Updates</h1>
             <p class="utext">For getting updates,
